# rurl

./: Cargo.toml  README.md
rurl/: Cargo.toml
rurl/src/: main.rs
rurl/src/printer/: mod.rs
rurl/src/requester/: reqwest_requester.rs
rurllib/: Cargo.toml
rurllib/src/: lib.rs
rurllib/src/requester/: reqwest_requester.rs
src/: main.rs  printer.rs  requester.rs
src/printer/: print.rs  simple_printer.rs
src/requester/: mod.rs  request.rs
