[package]
name = "rurl"
version = "0.1.0"
authors = ["Julien Giovaresco <dev@giovaresco.fr>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
reqwest = "0.10.8"
tokio = { version = "0.2.22", features = ["full"] }


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test", ]
