[package]
name = "rurllib"
version = "0.1.0"
authors = ["Julien Giovaresco <dev@giovaresco.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
reqwest = "0.10.8"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test", ]
